--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
   },
   "devDependencies": {
     "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
   }
 }
